--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,11 @@
       This website was made by Karthik Vinod.
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+  rel="stylesheet"
+  href="https://unpkg.com/vis-timeline@latest/styles/vis-timeline-graph2d.min.css"
+/>
+    
     
     <title>Life Mastery</title>
   </head>
