--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       name="author"
       content="Karthik Vinod"
     />
+    <meta name="description" content="Life Mastery - Unlock your potential through personal development.">
+<meta name="robots" content="index, follow">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       This website was made by Karthik Vinod.
