--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,18 @@
       name="author"
       content="Karthik Vinod"
     />
-    <meta name="description" content="Life Mastery - Unlock your potential through personal development.">
+    <meta name="description" content="Achieve personal growth and productivity with Life Mastery. Features include habit tracker, goal tracker, Pomodoro timer, AI assistant, and more." />
+    <meta property="og:title" content="Life Mastery | Unlock Your Potential" />
+<meta property="og:description" content="Track your goals, habits, journals, and more with Life Mastery. The ultimate tool for personal development and productivity." />
+<meta property="og:image" content="https://lifemastery.netlify.app/static/media/LifeMasteryLogo.b17f229477015849317b.png" />
+<meta property="og:url" content="https://lifemastery.netlify.app/" />
+<meta property="og:type" content="website" />
 <meta name="robots" content="index, follow">
+<meta name="keywords" content="habit tracker, goal tracker, pomodoro timer, productivity, personal development, self improvement, AI assistant, journal, Life Mastery" />
+<meta name="application-name" content="Life Mastery" />
+<meta name="copyright" content="Karthik Vinod" />
+<meta name="language" content="en" />
+<meta name="rating" content="General" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       This website was made by Karthik Vinod.
@@ -24,7 +34,7 @@
 
     
     
-    <title>Life Mastery</title>
+    <title>Life Mastery | Unlock Your True Potential</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
